--- a/EagleSocial/View/Base.lproj/LaunchScreen.storyboard
+++ b/EagleSocial/View/Base.lproj/LaunchScreen.storyboard
@@ -1,10 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Baskerville.ttc">
+            <string>Baskerville</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -13,13 +22,64 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M5d-tP-9f4" userLabel="Logo View">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="273"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="USMLogo" translatesAutoresizingMaskIntoConstraints="NO" id="NJr-Bb-pXr">
+                                        <rect key="frame" x="37" y="40" width="300" height="193"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="193" id="2YQ-VW-rzg"/>
+                                            <constraint firstAttribute="width" constant="300" id="6SO-Xd-BMe"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="NJr-Bb-pXr" firstAttribute="centerY" secondItem="M5d-tP-9f4" secondAttribute="centerY" id="537-KA-eS8"/>
+                                    <constraint firstItem="NJr-Bb-pXr" firstAttribute="centerX" secondItem="M5d-tP-9f4" secondAttribute="centerX" id="Uv4-IE-tfI"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cdQ-GG-Fk7">
+                                <rect key="frame" x="0.0" y="273" width="375" height="394"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Eagle Social" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5P-yt-p85">
+                                        <rect key="frame" x="64" y="65" width="247" height="58"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="247" id="3dh-iq-a9N"/>
+                                            <constraint firstAttribute="height" constant="58" id="9E6-PY-XzV"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="50"/>
+                                        <color key="textColor" red="1" green="0.75686274509803919" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="m5P-yt-p85" firstAttribute="top" secondItem="cdQ-GG-Fk7" secondAttribute="top" constant="65" id="IL3-5Z-8s5"/>
+                                    <constraint firstItem="m5P-yt-p85" firstAttribute="centerX" secondItem="cdQ-GG-Fk7" secondAttribute="centerX" id="iEa-wi-nQf"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="M5d-tP-9f4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2Oi-lC-qYa"/>
+                            <constraint firstItem="M5d-tP-9f4" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="3hM-Ra-JWl"/>
+                            <constraint firstItem="cdQ-GG-Fk7" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="9ES-7B-jjZ"/>
+                            <constraint firstItem="M5d-tP-9f4" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="NKv-zR-ifU"/>
+                            <constraint firstItem="cdQ-GG-Fk7" firstAttribute="top" secondItem="M5d-tP-9f4" secondAttribute="bottom" id="QUT-kv-MeB"/>
+                            <constraint firstItem="cdQ-GG-Fk7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="RoS-lo-W6W"/>
+                            <constraint firstItem="cdQ-GG-Fk7" firstAttribute="top" secondItem="M5d-tP-9f4" secondAttribute="bottom" id="bDL-uk-Xp2"/>
+                            <constraint firstItem="M5d-tP-9f4" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-197" id="kSH-fm-I5n"/>
+                            <constraint firstItem="cdQ-GG-Fk7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="pxW-fL-qUh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="USMLogo" width="765" height="408"/>
+    </resources>
 </document>
