--- a/EagleSocial/NewsFeedTableViewCell.xib
+++ b/EagleSocial/NewsFeedTableViewCell.xib
@@ -67,6 +67,9 @@
                                 <state key="normal" title=" Comment" image="comment_icon">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="commentButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0Cj-Zg-IZ8"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
